Recenter header and fixing layout issues on front page

--- a/_sass/justpeace.scss
+++ b/_sass/justpeace.scss
@@ -688,9 +688,9 @@ hr {
 }
 
 #phone_screenshot {
-  position: absolute;
+  // position: absolute;
   bottom: 0;
-  width: 100%;
+  // width: 100%;
   text-align: center;
   img {
     // max-width: 400px;
